// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AccountsContainer /> > should render as expected when accounts exist 1`] = `
<div>
  <div
    class="d_flex flex-d_row ai_center jc_space-between mt_20px mb_20px"
  >
    <h1
      class="c_primary fs_1.5rem fw_bold lh_tight m_0 "
    >
      accounts
    </h1>
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      class="d_inline-flex ai_center jc_center bdr_full fw_medium trs_all_0.2s cursor_pointer px_6 py_3 fs_sm lh_1 disabled:op_0.5 disabled:cursor_not-allowed focusVisible:ring_2px_solid focusVisible:ring-c_primary focusVisible:ring-o_2px bg_background c_text.primary bd_1px_solid bd-c_border hover:bg_accent hover:c_accent.foreground"
      data-state="closed"
      type="button"
    >
      addAccount
    </button>
  </div>
  <div
    class="d_grid grid-tc_1fr md:grid-tc_repeat(3,_1fr) gap_24px mb_32px"
  >
    <div
      class="bg-c_rgba(99,_99,_241,_0.08) dark:bg-c_rgba(99,_99,_241,_0.15) bd_1px_solid bd-c_primary bdr_lg p_24px d_flex flex-d_column gap_8px bx-sh_sm trs_transform_0.2s_ease,_box-shadow_0.2s_ease [&:hover]:trf_translateY(-2px) [&:hover]:bx-sh_md"
    >
      <p
        class="fs_xs fw_semibold lh_normal ls_normal c_gray.500 tt_uppercase m_0 "
      >
        Net Worth
      </p>
      <h2
        class="c_success.500 fs_1.875rem fw_bold mt_1 lh_tight m_0 "
      >
        £1,300
      </h2>
    </div>
    <div
      class="bg-c_card bd_1px_solid bd-c_border bdr_lg p_24px d_flex flex-d_column gap_8px bx-sh_xs trs_transform_0.2s_ease,_box-shadow_0.2s_ease,_border-color_0.2s_ease [&:hover]:trf_translateY(-2px) [&:hover]:bx-sh_sm [&:hover]:bd-c_primary"
    >
      <p
        class="fs_xs fw_semibold lh_normal ls_normal c_gray.500 tt_uppercase m_0 "
      >
        Total Assets
      </p>
      <h2
        class="c_success.500 fs_1.5rem fw_bold mt_1 lh_tight m_0 "
      >
        £1,800
      </h2>
    </div>
    <div
      class="bg-c_card bd_1px_solid bd-c_border bdr_lg p_24px d_flex flex-d_column gap_8px bx-sh_xs trs_transform_0.2s_ease,_box-shadow_0.2s_ease,_border-color_0.2s_ease [&:hover]:trf_translateY(-2px) [&:hover]:bx-sh_sm [&:hover]:bd-c_primary"
    >
      <p
        class="fs_xs fw_semibold lh_normal ls_normal c_gray.500 tt_uppercase m_0 "
      >
        Total Liabilities
      </p>
      <h2
        class="c_destructive.500 fs_1.5rem fw_bold mt_1 lh_tight m_0 "
      >
        £500
      </h2>
    </div>
  </div>
  <div
    class="bg-c_card bd_1px_solid bd-c_border bdr_lg p_16px_24px mb_32px bx-sh_xs"
  >
    <div
      class="d_flex jc_space-between ai_center mb_8px"
    >
      <p
        class="fs_xs fw_semibold lh_normal ls_normal c_text.muted tt_uppercase m_0 "
      >
        Asset Allocation Preview
      </p>
    </div>
    <div
      class="d_flex h_8px w_100% bdr_full ov_hidden bg-c_secondary mb_12px"
    >
      <div
        style="width: 55.55555555555556%; background-color: #6363F1; height: 100%;"
      />
      <div
        style="width: 44.44444444444444%; background-color: #10B981; height: 100%;"
      />
    </div>
    <div
      class="d_flex flex-wrap_wrap gap_16px"
    >
      <div
        class="d_flex ai_center gap_6px"
      >
        <div
          style="width: 8px; height: 8px; border-radius: 50%; background-color: #6363F1;"
        />
        <p
          class="fs_xs fw_medium lh_normal ls_normal c_text.primary m_0 "
        >
          Current
        </p>
        <p
          class="fs_xs fw_normal lh_normal ls_normal c_text.muted m_0 "
        >
          (
          56
          %)
        </p>
      </div>
      <div
        class="d_flex ai_center gap_6px"
      >
        <div
          style="width: 8px; height: 8px; border-radius: 50%; background-color: #10B981;"
        />
        <p
          class="fs_xs fw_medium lh_normal ls_normal c_text.primary m_0 "
        >
          Saving
        </p>
        <p
          class="fs_xs fw_normal lh_normal ls_normal c_text.muted m_0 "
        >
          (
          44
          %)
        </p>
      </div>
    </div>
  </div>
  <div
    class="mt_24px"
  >
    <div
      data-orientation="horizontal"
      dir="ltr"
    >
      <div
        aria-orientation="horizontal"
        class="d_flex bd-b_1px_solid bd-r_none bd-c_border gap_16px mb_16px flex-d_row"
        data-orientation="horizontal"
        role="tablist"
        style="outline-color: none; outline-style: none; outline-width: initial;"
        tabindex="0"
      >
        <button
          aria-controls="radix-_r_9_-content-my-accounts"
          aria-selected="true"
          class="p_8px_16px fs_sm fw_medium c_text.muted bg-c_transparent bd_none cursor_pointer trs_color_0.2s,_border-color_0.2s bd-b_2px_solid_transparent bd-r_none [&[data-state='active']]:c_primary [&[data-state='active']]:bd-c_primary hover:c_text.primary"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-_r_9_-trigger-my-accounts"
          role="tab"
          tabindex="-1"
          type="button"
        >
          My Accounts
        </button>
        <button
          aria-controls="radix-_r_9_-content-bank-connections"
          aria-selected="false"
          class="p_8px_16px fs_sm fw_medium c_text.muted bg-c_transparent bd_none cursor_pointer trs_color_0.2s,_border-color_0.2s bd-b_2px_solid_transparent bd-r_none [&[data-state='active']]:c_primary [&[data-state='active']]:bd-c_primary hover:c_text.primary"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-_r_9_-trigger-bank-connections"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Bank Connections
        </button>
      </div>
      <div
        aria-labelledby="radix-_r_9_-trigger-my-accounts"
        class="ring_none"
        data-orientation="horizontal"
        data-state="active"
        id="radix-_r_9_-content-my-accounts"
        role="tabpanel"
        style="animation-duration: 0s;"
        tabindex="0"
      >
        <div
          class="d_flex flex-d_column gap_10 mt_4 "
        >
          <div
            class="bd-b_1px_solid bd-c_border pb_24px mb_40px"
          >
            <div
              class="d_flex ai_center mb_16px pb_2 bd-b_1px_solid bd-c_border"
            >
              <svg
                class="fs_20px mr_10px d_inline-block va_middle"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: #6363F1;"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M461.2 128H80c-8.84 0-16-7.16-16-16s7.16-16 16-16h384c8.84 0 16-7.16 16-16 0-26.51-21.49-48-48-48H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h397.2c28.02 0 50.8-21.53 50.8-48V176c0-26.47-22.78-48-50.8-48zM416 336c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32z"
                />
              </svg>
              <h2
                class="c_text.primary fs_1.25rem fw_bold lh_tight m_0 "
              >
                Current
              </h2>
            </div>
            <div
              class="d_grid grid-tc_1fr sm:grid-tc_repeat(2,_1fr) md:grid-tc_repeat(3,_1fr) lg:grid-tc_repeat(4,_1fr) gap_24px mt_16px"
            >
              AccountsCard
              AccountsCard
            </div>
          </div>
          <div
            class="bd-b_1px_solid bd-c_border pb_24px mb_40px"
          >
            <div
              class="d_flex ai_center mb_16px pb_2 bd-b_1px_solid bd-c_border"
            >
              <svg
                class="fs_20px mr_10px d_inline-block va_middle"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: #10b981;"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M560 224h-29.5c-8.8-20-21.6-37.7-37.4-52.5L512 96h-32c-29.4 0-55.4 13.5-73 34.3-7.6-1.1-15.1-2.3-23-2.3H256c-77.4 0-141.9 55-156.8 128H56c-14.8 0-26.5-13.5-23.5-28.8C34.7 215.8 45.4 208 57 208h1c3.3 0 6-2.7 6-6v-20c0-3.3-2.7-6-6-6-28.5 0-53.9 20.4-57.5 48.6C-3.9 258.8 22.7 288 56 288h40c0 52.2 25.4 98.1 64 127.3V496c0 8.8 7.2 16 16 16h64c8.8 0 16-7.2 16-16v-48h128v48c0 8.8 7.2 16 16 16h64c8.8 0 16-7.2 16-16v-80.7c11.8-8.9 22.3-19.4 31.3-31.3H560c8.8 0 16-7.2 16-16V240c0-8.8-7.2-16-16-16zm-128 64c-8.8 0-16-7.2-16-16s7.2-16 16-16 16 7.2 16 16-7.2 16-16 16zM256 96h128c5.4 0 10.7.4 15.9.8 0-.3.1-.5.1-.8 0-53-43-96-96-96s-96 43-96 96c0 2.1.5 4.1.6 6.2 15.2-3.9 31-6.2 47.4-6.2z"
                />
              </svg>
              <h2
                class="c_text.primary fs_1.25rem fw_bold lh_tight m_0 "
              >
                Saving
              </h2>
            </div>
            <div
              class="d_grid grid-tc_1fr sm:grid-tc_repeat(2,_1fr) md:grid-tc_repeat(3,_1fr) lg:grid-tc_repeat(4,_1fr) gap_24px mt_16px"
            >
              AccountsCard
              AccountsCard
              AccountsCard
            </div>
          </div>
          <div
            class="bd-b_1px_solid bd-c_border pb_24px mb_40px"
          >
            <div
              class="d_flex ai_center mb_16px pb_2 bd-b_1px_solid bd-c_border"
            >
              <svg
                class="fs_20px mr_10px d_inline-block va_middle"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: #ef4444;"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
                />
              </svg>
              <h2
                class="c_text.primary fs_1.25rem fw_bold lh_tight m_0 "
              >
                Mortgage
              </h2>
            </div>
            <div
              class="d_grid grid-tc_1fr sm:grid-tc_repeat(2,_1fr) md:grid-tc_repeat(3,_1fr) lg:grid-tc_repeat(4,_1fr) gap_24px mt_16px"
            >
              AccountsCard
            </div>
          </div>
          <div
            class="bd-b_1px_solid bd-c_border pb_24px mb_40px"
          >
            <div
              class="d_flex ai_center mb_16px pb_2 bd-b_1px_solid bd-c_border"
            >
              <svg
                class="fs_20px mr_10px d_inline-block va_middle"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: #a855f7;"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M271.06,144.3l54.27,14.3a8.59,8.59,0,0,1,6.63,8.1c0,4.6-4.09,8.4-9.12,8.4h-35.6a30,30,0,0,1-11.19-2.2c-5.24-2.2-11.28-1.7-15.3,2l-19,17.5a11.68,11.68,0,0,0-2.25,2.66,11.42,11.42,0,0,0,3.88,15.74,83.77,83.77,0,0,0,34.51,11.5V240c0,8.8,7.83,16,17.37,16h17.37c9.55,0,17.38-7.2,17.38-16V222.4c32.93-3.6,57.84-31,53.5-63-3.15-23-22.46-41.3-46.56-47.7L282.68,97.4a8.59,8.59,0,0,1-6.63-8.1c0-4.6,4.09-8.4,9.12-8.4h35.6A30,30,0,0,1,332,83.1c5.23,2.2,11.28,1.7,15.3-2l19-17.5A11.31,11.31,0,0,0,368.47,61a11.43,11.43,0,0,0-3.84-15.78,83.82,83.82,0,0,0-34.52-11.5V16c0-8.8-7.82-16-17.37-16H295.37C285.82,0,278,7.2,278,16V33.6c-32.89,3.6-57.85,31-53.51,63C227.63,119.6,247,137.9,271.06,144.3ZM565.27,328.1c-11.8-10.7-30.2-10-42.6,0L430.27,402a63.64,63.64,0,0,1-40,14H272a16,16,0,0,1,0-32h78.29c15.9,0,30.71-10.9,33.25-26.6a31.2,31.2,0,0,0,.46-5.46A32,32,0,0,0,352,320H192a117.66,117.66,0,0,0-74.1,26.29L71.4,384H16A16,16,0,0,0,0,400v96a16,16,0,0,0,16,16H372.77a64,64,0,0,0,40-14L564,377a32,32,0,0,0,1.28-48.9Z"
                />
              </svg>
              <h2
                class="c_text.primary fs_1.25rem fw_bold lh_tight m_0 "
              >
                Loan
              </h2>
            </div>
            <div
              class="d_grid grid-tc_1fr sm:grid-tc_repeat(2,_1fr) md:grid-tc_repeat(3,_1fr) lg:grid-tc_repeat(4,_1fr) gap_24px mt_16px"
            >
              AccountsCard
            </div>
          </div>
          <div
            class="bd-b_1px_solid bd-c_border pb_24px mb_40px"
          >
            <div
              class="d_flex ai_center mb_16px pb_2 bd-b_1px_solid bd-c_border"
            >
              <svg
                class="fs_20px mr_10px d_inline-block va_middle"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: #64748b;"
                viewBox="0 0 640 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M192 256c61.9 0 112-50.1 112-112S253.9 32 192 32 80 82.1 80 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C51.6 288 0 339.6 0 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zM480 256c53 0 96-43 96-96s-43-96-96-96-96 43-96 96 43 96 96 96zm48 32h-3.8c-13.9 4.8-28.6 8-44.2 8s-30.3-3.2-44.2-8H432c-20.4 0-39.2 5.9-55.7 15.4 24.4 26.3 39.7 61.2 39.7 99.8v38.4c0 2.2-.5 4.3-.6 6.4H592c26.5 0 48-21.5 48-48 0-61.9-50.1-112-112-112z"
                />
              </svg>
              <h2
                class="c_text.primary fs_1.25rem fw_bold lh_tight m_0 "
              >
                Owed
              </h2>
            </div>
            <div
              class="d_grid grid-tc_1fr sm:grid-tc_repeat(2,_1fr) md:grid-tc_repeat(3,_1fr) lg:grid-tc_repeat(4,_1fr) gap_24px mt_16px"
            >
              AccountsCard
            </div>
          </div>
        </div>
      </div>
      <div
        aria-labelledby="radix-_r_9_-trigger-bank-connections"
        class="ring_none"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-_r_9_-content-bank-connections"
        role="tabpanel"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`<AccountsContainer /> > should render as expected when no accounts exist 1`] = `
<div>
  <div
    class="d_flex flex-d_row ai_center jc_space-between mt_20px mb_20px"
  >
    <h1
      class="c_primary fs_1.5rem fw_bold lh_tight m_0 "
    >
      accounts
    </h1>
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      class="d_inline-flex ai_center jc_center bdr_full fw_medium trs_all_0.2s cursor_pointer px_6 py_3 fs_sm lh_1 disabled:op_0.5 disabled:cursor_not-allowed focusVisible:ring_2px_solid focusVisible:ring-c_primary focusVisible:ring-o_2px bg_background c_text.primary bd_1px_solid bd-c_border hover:bg_accent hover:c_accent.foreground"
      data-state="closed"
      type="button"
    >
      addAccount
    </button>
  </div>
  <div
    class="mt_24px"
  >
    <div
      data-orientation="horizontal"
      dir="ltr"
    >
      <div
        aria-orientation="horizontal"
        class="d_flex bd-b_1px_solid bd-r_none bd-c_border gap_16px mb_16px flex-d_row"
        data-orientation="horizontal"
        role="tablist"
        style="outline-color: none; outline-style: none; outline-width: initial;"
        tabindex="0"
      >
        <button
          aria-controls="radix-_r_3_-content-my-accounts"
          aria-selected="true"
          class="p_8px_16px fs_sm fw_medium c_text.muted bg-c_transparent bd_none cursor_pointer trs_color_0.2s,_border-color_0.2s bd-b_2px_solid_transparent bd-r_none [&[data-state='active']]:c_primary [&[data-state='active']]:bd-c_primary hover:c_text.primary"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-_r_3_-trigger-my-accounts"
          role="tab"
          tabindex="-1"
          type="button"
        >
          My Accounts
        </button>
        <button
          aria-controls="radix-_r_3_-content-bank-connections"
          aria-selected="false"
          class="p_8px_16px fs_sm fw_medium c_text.muted bg-c_transparent bd_none cursor_pointer trs_color_0.2s,_border-color_0.2s bd-b_2px_solid_transparent bd-r_none [&[data-state='active']]:c_primary [&[data-state='active']]:bd-c_primary hover:c_text.primary"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-_r_3_-trigger-bank-connections"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Bank Connections
        </button>
      </div>
      <div
        aria-labelledby="radix-_r_3_-trigger-my-accounts"
        class="ring_none"
        data-orientation="horizontal"
        data-state="active"
        id="radix-_r_3_-content-my-accounts"
        role="tabpanel"
        style="animation-duration: 0s;"
        tabindex="0"
      >
        <div
          class="d_flex flex-d_column gap_10 mt_4 "
        >
          <div
            class="p_64px_24px ta_center bd_2px_dashed bd-c_border bdr_lg d_flex flex-d_column ai_center gap_16px max-w_480px m_40px_auto"
          >
            <div
              class="w_56px h_56px bdr_full bg-c_rgba(99,_99,_241,_0.08) d_flex ai_center jc_center fs_24px c_primary"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M461.2 128H80c-8.84 0-16-7.16-16-16s7.16-16 16-16h384c8.84 0 16-7.16 16-16 0-26.51-21.49-48-48-48H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h397.2c28.02 0 50.8-21.53 50.8-48V176c0-26.47-22.78-48-50.8-48zM416 336c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32z"
                />
              </svg>
            </div>
            <div>
              <h3
                class="c_primary fs_1rem fw_bold mb_1 lh_tight m_0 "
              >
                No Accounts Connected
              </h3>
              <p
                class="fs_sm fw_normal lh_normal ls_normal c_text.muted m_0 "
              >
                Connect your bank accounts securely or create manual ones to start tracking your net worth and asset allocation progression.
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-labelledby="radix-_r_3_-trigger-bank-connections"
        class="ring_none"
        data-orientation="horizontal"
        data-state="inactive"
        hidden=""
        id="radix-_r_3_-content-bank-connections"
        role="tabpanel"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;
